- updates user avatar style - fixes #issue-view margin collapse problem
Former-commit-id: 764c4f397bdab5adc47f7ffc8d0c3a6c5de1dc0b [formerly be1ad38b6879a6fb079a015c5e6410ddbb751ad9 [formerly f4d8a3fbefaac36d03ea6e7e7d6fa4b2abb21426]]
Former-commit-id: fc95e03d6acbafc73b0614a51c7f5428d853a8df
Former-commit-id: f85546052460165b022bce12fd987e0a8d69e28c

--- a/stylesheets/app/page.scss
+++ b/stylesheets/app/page.scss
@@ -181,6 +181,15 @@ article.page {
     }
   }
 
+  .extras {
+    .avatar {
+      width: 78px;
+      height: 78px;
+      border: 2px solid #eee;
+      border-radius: 50%;
+    }
+  }
+
   blockquote {
     font-family: Georgia, serif;
     font-size: 18px;
